feat: add stopwatch control buttons and interval logic with cleanup

--- a/stopwatch-app/src/components/aFormattedTime/FormattedTime.module.scss
+++ b/stopwatch-app/src/components/aFormattedTime/FormattedTime.module.scss
@@ -1,7 +1,8 @@
 @import '../../styles/settings.scss';
 
 .component {
-    font-size: 32px;
+    font-size: 48px;
     font-weight: bold;
     text-align: center;
+    color: $color-light;
 }
